<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.Fragment_Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/my_attendancelogo" />

        <TextView
            android:id="@+id/login_app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#428945"
            android:capitalize="characters"
            android:fontFamily="monospace"
            android:text="@string/login_app_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@android:color/background_light"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/login_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="84dp"
            android:fontFamily="monospace"
            android:text="@string/login_label"
            android:textColor="@android:color/black"
            android:textSize="22sp"
            android:textStyle="italic" />
        <EditText
            android:id="@+id/login_editText_username"
            android:layout_width="300dp"
            android:layout_height="45dp"
            android:layout_marginTop="8dp"
            android:background="@android:color/background_light"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/login_editText_username"
            android:inputType="textEmailAddress"
            android:textColor="@android:color/background_dark"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/login_label_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:fontFamily="monospace"
            android:text="@string/login_label_password"
            android:textColor="@android:color/black"
            android:textSize="22sp"
            android:textStyle="italic" />


        <EditText
            android:id="@+id/login_editText_password"
            android:layout_width="300dp"
            android:layout_height="45dp"
            android:background="@android:color/background_light"
            android:ems="10"
            android:fadeScrollbars="true"
            android:gravity="center"
            android:hint="@string/login_editText_password"
            android:inputType="textPassword"
            android:textColor="@android:color/background_dark"
            android:textSize="20sp" />

        <Button
            android:id="@+id/login_button_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@android:color/background_dark"
            android:text="@string/login_button_Login"
            android:textColor="@android:color/background_light"
            android:textStyle="bold" />

        <Button
            android:id="@+id/login_button_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@android:color/background_dark"
            android:text="@string/login_button_signup"
            android:textColor="@android:color/background_light"
            android:textStyle="bold" />



    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="false"
        android:layout_alignParentRight="false">

        <TextView
            android:id="@+id/textViewEnglish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textViewEnglish"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textViewEspañol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textSize="18sp"
            android:text="@string/textViewEspañol" />
    </LinearLayout>

</RelativeLayout>