<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.Fragment_Signup">

    <LinearLayout
        android:layout_width="397dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/my_attendancelogo" />

        <TextView
            android:id="@+id/signup_app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#428945"
            android:capitalize="characters"
            android:fontFamily="monospace"
            android:text="@string/login_app_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@android:color/background_light"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/signup_label_name"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:fontFamily="monospace"
            android:gravity="center"
            android:text="@string/signup_label_name"
            android:textColor="@android:color/black"
            android:textSize="22sp"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/signup_editText_name"
            android:layout_width="282dp"
            android:layout_height="45dp"
            android:layout_marginTop="12dp"
            android:background="@android:color/background_light"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/signup_edittext_name"
            android:inputType="textEmailAddress"
            android:textColor="@android:color/background_dark"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/signup_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="monospace"
            android:text="@string/signup_label"
            android:textColor="@android:color/black"
            android:textSize="22sp"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/signup_editText_username"
            android:layout_width="300dp"
            android:layout_height="45dp"
            android:layout_marginTop="12dp"
            android:background="@android:color/background_light"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/signup_editText_username"
            android:inputType="textEmailAddress"
            android:textColor="@android:color/background_dark"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/signup_label_password"
            android:layout_width="115dp"
            android:layout_height="36dp"
            android:layout_marginTop="28dp"
            android:fontFamily="monospace"
            android:text="@string/signup_label_password"
            android:textColor="@android:color/black"
            android:textSize="22sp"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/signup_editText_password"
            android:layout_width="300dp"
            android:layout_height="45dp"
            android:layout_marginTop="12dp"
            android:background="@android:color/background_light"
            android:ems="10"
            android:fadeScrollbars="true"
            android:gravity="center"
            android:hint="@string/signup_editText_password"
            android:inputType="textPassword"
            android:textColor="@android:color/background_dark"
            android:textSize="20sp" />

        <Button
            android:id="@+id/signup_button_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@android:color/background_dark"
            android:text="@string/signup_button_signup"
            android:textColor="@android:color/background_light"
            android:textStyle="bold" />

    </LinearLayout>
</RelativeLayout>